- Made footer always full width - Made Pro badge inline and on the right side of tabs - Moved sign in button to the right side - Fixed banner movement & styles - Made sidebar same bg color as page - Fixed auth page styling - Fixed CTA button text wrap - Reverted to fumadocs native theme toggle in footer - Reduced logo size in footer

--- a/fumadocs/app/styles.css
+++ b/fumadocs/app/styles.css
@@ -2,6 +2,15 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 
+body {
+  overscroll-behavior: none;
+}
+
+#nd-sidebar,
+.dark #nd-sidebar {
+  background: var(--color-fd-background);
+}
+
 /* TODO: Don't think we should need to add this manually - bug in fumadocs? */
 #nd-subnav [data-active="true"] {
   color: var(--color-fd-primary);
